--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>越哥说电影解说合集</title>
     <script>
+    # 当前仓库弃用，重定向到新地址
+    window.location.href = "https://yue.struy.cn";
     var _hmt = _hmt || [];
     (function() {
       var hm = document.createElement("script");
